<resources>
    <string name="app_name" translatable="false">litube</string>
    <string name="base_url" translatable="false">https://m.youtube.com</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="video">Video</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="video_quality">Video Quality</string>
    <string name="confirm">Confirm</string>
    <string name="downloading">"Downloading: "</string>
    <string name="select_something_first">Select something first</string>
    <string name="retry">Retry</string>
    <string name="download_complete">"Download complete "</string>
    <string name="download_canceled">"Download Canceled "</string>
    <string name="thumbnail_has_been_saved_to">"Thumbnail has been saved to:  "</string>
    <string name="download_finished">Download finished:  \"%s\" has been saved to \"%s\"</string>
    <string name="retry_download">"Retry Download "</string>
    <string name="failed_to_download">Failed to download</string>
    <string name="download_canceled_err">Download Canceled Err: because has already completed normally or has already finished with an error</string>
    <string name="failed_to_download_thumbnail">"Failed to download thumbnail "</string>
    <string name="failed_to_load_image">"Failed to load image "</string>
    <string name="failed_to_load_video_details">"Failed to load video details "</string>
    <string name="delete">Delete</string>
    <string name="file_deleted">File deleted</string>
    <string name="audio_only">Audio Only</string>
    <string name="audio_move_error">Failed to move audio file to public directory</string>
    <string name="video_move_error">Failed to move video file to public directory</string>
    <string name="downloader_initialize_error">Failed to initialize the downloader</string>
    <string name="failed_to_delete">Failed to delete the file </string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="share_thumbnail">Share Thumbnail</string>
    <string name="application_not_found">application not found</string>
    <string name="extension">Extension</string>
    <string name="request_restart">Restart to apply changes</string>
    <string name="restart">"Restart "</string>
    <string name="display_dislikes">Display dislikes</string>
    <string name="hide_shorts">Hide shorts</string>
    <string name="h264ify">H264ify(makes YouTube stream H.264 videos instead of VP8/VP9 videos.)</string>
    <string name="enable_live_chat">Enable live chat</string>
    <string name="action_pause">Pause</string>
    <string name="action_play">Play</string>
    <string name="action_previous">Skip to previous</string>
    <string name="action_next">Skip to next</string>
    <string name="general">General</string>
    <string name="player">Player</string>
    <string name="ads">Ads</string>
    <string name="downloader">Downloader</string>
    <string name="other">Other</string>
    <string name="cpu_tamer_experimental">Reduce CPU load on YouTube using hybrid DOMMutation + AnimationFrame strategy with dynamic switching and delay correction(Experimental)</string>
    <string name="skip_sponsors">Skip sponsors/SelfPromo</string>
    <string name="failed_to_load_video_formats">failed to load video formats</string>
</resources>